@@ -14,13 +14,12 @@
 #include "main.h"
 #include "net.h"
 
-
-//
-// Global variables
-//
-
+/**
+ * Global variables
+ */
 char g_szDomainName[128] = "netxms.org";
 char g_szFailedDir[1024] = "";
+UINT32 g_serviceCheckFlags = 0;
 
 /**
  * Command handler
@@ -156,8 +155,9 @@ UINT32 m_dwDefaultTimeout = 3000;
 static NX_CFG_TEMPLATE m_cfgTemplate[] =
 {
 	{ _T("DomainName"), CT_MB_STRING, 0, 0, 128, 0, g_szDomainName },
-	{ _T("Timeout"), CT_LONG, 0, 0, 0, 0, &m_dwDefaultTimeout },
 	{ _T("FailedDirectory"), CT_MB_STRING, 0, 0, 1024, 0, &g_szFailedDir },
+   { _T("NegativeResponseTimeOnError"), CT_BOOLEAN, 0, 0, SCF_NEGATIVE_TIME_ON_ERROR, 0, &g_serviceCheckFlags },
+   { _T("Timeout"), CT_LONG, 0, 0, 0, 0, &m_dwDefaultTimeout },
 	{ _T(""), CT_END_OF_LIST, 0, 0, 0, 0, NULL }
 };
 
