@@ -38,6 +38,8 @@ LONG H_CheckTelnet(const TCHAR *param, const TCHAR *arg, TCHAR *value, AbstractC
    {
       if (result == PC_ERR_NONE)
          ret_int64(value, GetCurrentTimeMs() - start);
+      else if (g_serviceCheckFlags & SCF_NEGATIVE_TIME_ON_ERROR)
+         ret_int(value, -result);
       else
          nRet = SYSINFO_RC_ERROR;
    }
